Title and generate report buttons HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -1,6 +1,8 @@
 
 <h1>Harvest Report</h1>
 <p><FONT COLOR="GREY"> This page is a <i>mockup</i> of a simplfied Harvest Report</FONT></p>
+<input type="text" value="Title:" />
+<button type="generate">Generate Report</button>
 <hr style="width:33%;margin-left:0">
 <h1>My Sample Harvest Report</h1>
 <p><FONT COLOR="GREY"> Details:</FONT></p>
