--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -10,6 +10,13 @@
     <option>Peas</option>
   </select>
 <br>
+<label for="field">Field:</label>
+<select id="field">
+    <option selected>All</option>
+    <option>Chuau-1</option>
+    <option>SQ7</option>
+  </select>
+<br>
 <button type="submit">Generate Report</button>
 <hr style="width:33%;margin-left:0">
 <h1>My Sample Harvest Report</h1>
