Date Buttons added HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -17,6 +17,12 @@
     <option>SQ7</option>
   </select>
 <br>
+<label for="start">Start date:</label>
+<input type="date" id="start" min="01-01-2014" value="05-05-2020" max="01-01-2022" />
+<br>
+<label for="end">End date:</label>
+<input type="date" id="end" min="05-05-2020" value="05-15-2020" max="01-01-2022" />
+<br>
 <button type="submit">Generate Report</button>
 <hr style="width:33%;margin-left:0">
 <h1>My Sample Harvest Report</h1>
