Example table added HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -36,3 +36,32 @@
     <li><b>End:</b> 05/01/2018</li>
     <li><b>Crop:</b> Kale</li>
 </ul>
+<table>
+    <style>
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        </style>
+    <tr>
+      <th>Date</th>
+      <th>Area</th>
+      <th>Crop</th>
+      <th>Yield</th>
+      <th>Units</th>
+    </tr>
+    <tr>
+      <td>05/02/2018</td>
+      <td>Chuau-1</td>
+      <td>Kale</td>
+      <td>10</td>
+      <td>Bunches</td>
+    </tr>
+    <tr>
+      <td>05/05/2018</td>
+      <td>SQ7</td>
+      <td>Kale</td>
+      <td>7</td>
+      <td>Bunches</td>
+    </tr>
+</table>
