--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,20 +1,19 @@
 <html>
 
 <h1>Harvest Report</h1>
-    <p>This page is a simple mockup of a simplified harvest report.</p>
-
-    <h1>My Sample Harvest Report</h1>
+    <p>This page is a simple <i>mockup</i> of a simplified harvest report.</p>
+<hr>
+<h1>My Sample Harvest Report</h1>
     <p>Details:
         <ul>
             <li><strong>Farm:</strong> Sample Farm</li>
             <li><strong>User:</strong> manager1</li>
             <li><strong>Language:</strong> English</li>
-        </ul>
-        <ul>
+            <br>
             <li><strong>Start:</strong> 05/01/2018</li>
             <li><strong>End:</strong> 05/15/2018</li>
             <li><strong>Crop:</strong> Kale</li>
         </ul>
     </p>
-
+<hr>
 </html>
