--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,6 +3,10 @@
         <h1>Harvest Report</h1>
         <br>
         <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
+        <label for=”title”>Title:</label>
+        <input type="text" id="title" value="My Sample Harvest Report"/>
+        <br>
+        <input type="button" value="Generate Report" />
         <hr>
     
     </head>
@@ -17,5 +21,6 @@
             <li><b>Start:</b>05/01/2018</li>
             <li><b>End:</b>05/15/2018</li>
             <li><b>Crop:</b>Kale</li>
+        </ul>
     </body>
 </html>
