Added crop dropdown menu

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -6,6 +6,12 @@
         <label for=”title”>Title:</label>
         <input type="text" id="title" value="My Sample Harvest Report"/>
         <br>
+        <label for=”crops”>Crop:</label>
+        <select id="crops" name="crops">
+            <option selected>Kale</option>
+            <option>Broccoli</option>
+            <option>Peas</option>
+        </select>
         <input type="button" value="Generate Report" />
         <hr>
     
