Added field dropdown menu

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -6,12 +6,21 @@
         <label for=”title”>Title:</label>
         <input type="text" id="title" value="My Sample Harvest Report"/>
         <br>
+        <br>
         <label for=”crops”>Crop:</label>
         <select id="crops" name="crops">
             <option selected>Kale</option>
             <option>Broccoli</option>
             <option>Peas</option>
         </select>
+        <label for=”fields”>Area:</label>
+        <select id="fields" name="fields">
+            <option selected>All</option>
+            <option>Chuau-1</option>
+            <option>SQ7</option>
+        </select>
+        <br>
+        <br>
         <input type="button" value="Generate Report" />
         <hr>
     
