--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -7,6 +7,14 @@
         <input type="text" id="title" value="My Sample Harvest Report"/>
         <br>
         <br>
+        <label for="start">Start:</label>
+        <input type="date" id="start" name="start" value="2020-05-05" 
+        min="2014-01-01" max="2022-01-01" />
+        <label for="send">End:</label>
+        <input type="date" id="end" name="end" value="2020-05-15" 
+        min="2020-05-05" max="2022-01-01" />
+        <br>
+        <br>
         <label for=”crops”>Crop:</label>
         <select id="crops" name="crops">
             <option selected>Kale</option>
