Started the Harvest Report Spike

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -1,5 +1,18 @@
-Aidan Bennett-Jones
-hello world
-
-this is atest 
-here is a change
+<html>
+    <body>
+        <header>
+            <h1>Harvest Report</h1>
+            <h2>This page is a mockup of a simplified harfest report</h2>
+            <h1>My Sample Harvest:</h1>
+            <h2>Details:</h2>
+                <ul>
+                    <li><b>Farm:</b>Sample Farm</li>
+                    <li><b>User:</b>manager1</li>
+                    <li><b>Language:</b>English</li>
+                    <li><b>Start:</b>05/01/2018</li>
+                    <li><b>End:</b>05/15/2018</li>
+                    <li><b>Crop:</b>Kale</li>
+                </ul>
+        </header>
+    </body>
+</html>
