--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -2,13 +2,14 @@
     <body>
         <header>
             <h1>Harvest Report</h1>
-            <h2>This page is a mockup of a simplified harfest report</h2>
+            <p>This page is a <em>mockup</em> of a simplified harvest report</p>
+            <hr />
             <h1>My Sample Harvest:</h1>
-            <h2>Details:</h2>
+            <p>Details:</p>
                 <ul>
                     <li><b>Farm:</b>Sample Farm</li>
                     <li><b>User:</b>manager1</li>
-                    <li><b>Language:</b>English</li>
+                    <li><b>Language:</b>English</li><br>
                     <li><b>Start:</b>05/01/2018</li>
                     <li><b>End:</b>05/15/2018</li>
                     <li><b>Crop:</b>Kale</li>
