--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -1,6 +1,8 @@
 <html>
-    <body>
-        <header>
+    <header>
+        <title>Anonymous Button Example</title>
+        <body>
+            <title>Title Field Example</title>
             <h1>Harvest Report</h1>
             <p>This page is a <em>mockup</em> of a simplified harvest report</p>
             <hr />
@@ -14,6 +16,9 @@
                     <li><b>End:</b>05/15/2018</li>
                     <li><b>Crop:</b>Kale</li>
                 </ul>
-        </header>
-    </body>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" placeholder="Enter the title">
+                <button>Generate Report</button>
+            </body>
+    </header>
 </html>
