--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,7 +3,10 @@
 <h1>Harvest Report</h1>
     <p>This page is a simple <i>mockup</i> of a simplified harvest report.</p>
 <hr>
-<h1>My Sample Harvest Report</h1>
+<label for="title">Title:</label>
+<input type="text" id="title" value="My Sample Harvest Report"/>
+<br>
+<button type="generate">Generate Report</button>
     <p>Details:
         <ul>
             <li><strong>Farm:</strong> Sample Farm</li>
