--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -5,8 +5,6 @@
 <hr>
 <label for="title">Title:</label>
 <input type="text" id="title" value="My Sample Harvest Report"/>
-<br>
-<button type="generate">Generate Report</button>
     <p>Details:
         <ul>
             <li><strong>Farm:</strong> Sample Farm</li>
@@ -15,8 +13,17 @@
             <br>
             <li><strong>Start:</strong> 05/01/2018</li>
             <li><strong>End:</strong> 05/15/2018</li>
-            <li><strong>Crop:</strong> Kale</li>
+            <li>
+                <label for="simple"><strong>Crop:</strong></label>
+                <select id="simple" name="simple">
+                    <option>Broccoli</option>
+                    <option selected>Kale</option>
+                    <option>Peas</option>
+                </select>
+            </li>
         </ul>
+        <br>
+        <button type="generate">Generate Report</button>
     </p>
 <hr>
 </html>
