Added Field Drop Down with a Label to HTML

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -14,11 +14,19 @@
             <li><strong>Start:</strong> 05/01/2018</li>
             <li><strong>End:</strong> 05/15/2018</li>
             <li>
-                <label for="simple"><strong>Crop:</strong></label>
-                <select id="simple" name="simple">
+                <label for="crop"><strong>Crop:</strong></label>
+                <select id="crop" name="crop">
                     <option>Broccoli</option>
                     <option selected>Kale</option>
                     <option>Peas</option>
+                </select>
+            </li>
+            <li>
+                <label for="field"><strong>Area:</strong></label>
+                <select id="field" name="field">
+                    <option slected>All</option>
+                    <option>Chuau-1</option>
+                    <option>SQ7</option>
                 </select>
             </li>
         </ul>
