Added Start and End Date Fields with Labels to HTML

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -11,8 +11,14 @@
             <li><strong>User:</strong> manager1</li>
             <li><strong>Language:</strong> English</li>
             <br>
-            <li><strong>Start:</strong> 05/01/2018</li>
-            <li><strong>End:</strong> 05/15/2018</li>
+            <li>
+                <label for="startDate"><strong>Start:</strong></label>
+                <input type="date" id="startDate" name="startDate" value="2020-05-05" min="2014-01-01" max="2022-01-01"/>
+            </li>
+            <li>
+                <label for="endDate"><strong>End:</strong></label>
+                <input type="date" id="endDate" name="endDate" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+            </li>
             <li>
                 <label for="crop"><strong>Crop:</strong></label>
                 <select id="crop" name="crop">
