--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -5,6 +5,22 @@
             <title>Title Field Example</title>
             <h1>Harvest Report</h1>
             <p>This page is a <em>mockup</em> of a simplified harvest report</p>
+            <label for="start">Start Date:</label>
+                <input type="date" id="start" name="start-date" value="2020-05-05" min="2014-01-01" max="2022-01-01"/>
+            <label for="end">End Date:</label>
+                <input type="date" id="end" name="end-date" value="20202-05-15" min="2020-05-05" max="2022-01-01"/><br>
+            <label for="crops">Crop:</label>
+                <select name="crops" id="crops">
+                    <option value="broccili">Broccili</option>
+                    <option value="kale">Kale</option>
+                    <option value="peas">Peas</option>
+                </select>
+            <label for="area">Area:</label>
+                <select name="area" id="area">
+                    <option value="all">All</option>
+                    <option value="chuahu-1">Chuau-1</option>
+                    <option value="sq7">SQ7</option>
+                </select>
             <hr />
             <h1>My Sample Harvest:</h1>
             <p>Details:</p>
@@ -19,6 +35,7 @@
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" placeholder="Enter the title">
                 <button>Generate Report</button>
+        
             </body>
     </header>
 </html>
