--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -35,7 +35,29 @@
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" placeholder="Enter the title">
                 <button>Generate Report</button>
-        
+                <table border=1>
+                    <tr>
+                        <th>Date</th>
+                        <th>Area</th> 
+                        <th>Crop</th>
+                        <th>Field</th>
+                        <th>Units</th>
+                    </tr>
+                    <tr>
+                        <td>05/02/2018</td>
+                        <td>05/05/2018</td> 
+                        <td>Kale</td>
+                        <td>10</td>
+                        <td>Bunches</td>
+                    </tr>
+                    <tr>
+                        <td>Chuau-1</td>
+                        <td>SQ7</td> 
+                        <td>Kale</td>
+                        <td>7</td>
+                        <td>Bunches</td>
+                    </tr>
+                </table>
             </body>
     </header>
 </html>
