--- a/farmdata2/farmdata2_modules/fd2_school/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html.html
@@ -1,1 +1,25 @@
-### Hi, my name is Vy Phung 
+<!doctype html>
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>FarmData2 HTML</title>
+  </head>
+  <body>
+    <h1>Harvest Report</h1>
+        <p>This page is a mockup of a simplified harvest report.</p>
+        <hr>
+    <h1>My Sample Harvest Report</h1>
+        <p>Details:</p>
+        <ul>
+            <li><strong>Farm:</strong>Sample Farm</li>
+            <li><strong>User:</strong>manager1</li>
+            <li><strong>Language:</strong>English</li>
+        </ul>
+        <ul>
+            <li><strong>Start:</strong>05/01/2018</li>
+            <li><strong>End:</strong>05/15/2018</li>
+            <li><strong>Crop:</strong>Kale</li>
+        </ul>
+  </body>
+</html>
