--- a/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
@@ -19,6 +19,13 @@
         <option>Peas</option>
     </select>
     <br>
+    <label for="field">Field:</label>
+    <select id="field" name="field">
+        <option selected>All</option>
+        <option>Chuau-1</option>
+        <option>SQ7</option>
+    </select>
+    <br>
     <button type="button">Generate Report</button>
     <hr>
     <h1>My Sample Harvest Report</h1>
