--- a/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
@@ -26,6 +26,12 @@
         <option>SQ7</option>
     </select>
     <br>
+    <label for="start-date">Start Date:</label>
+    <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+    <br>
+    <label for="end-date">End Date:</label>
+    <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+    <br>
     <button type="button">Generate Report</button>
     <hr>
     <h1>My Sample Harvest Report</h1>
