--- a/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
@@ -12,25 +12,26 @@
     <label for="title">Title:</label>
     <input type="text" id="title" name="title" />
     <br>
+    <br>
+    <label for="start-date">Start:</label>
+    <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+    <label for="end-date">End:</label>
+    <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+    <br>
+    <br>
     <label for="crop">Crop:</label>
     <select id="crop" name="crop">
         <option>Broccoli</option>
         <option selected>Kale</option>
         <option>Peas</option>
     </select>
-    <br>
-    <label for="field">Field:</label>
+    <label for="field">Area:</label>
     <select id="field" name="field">
         <option selected>All</option>
         <option>Chuau-1</option>
         <option>SQ7</option>
     </select>
     <br>
-    <label for="start-date">Start Date:</label>
-    <input type="date" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
-    <br>
-    <label for="end-date">End Date:</label>
-    <input type="date" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
     <br>
     <button type="button">Generate Report</button>
     <hr>
