--- a/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/html.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Harvest Report</h1>
-    <p>This is a <i>mockup</i> of a simplified harvest report.</p>
+    <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
     <label for="title">Title:</label>
-    <input type="text" id="title" name="title" />
+    <input type="text" id="title" name="title"/>
     <br>
     <br>
     <label for="start-date">Start:</label>
@@ -46,5 +46,29 @@
         <li><strong>End</strong>:05/15/2018</li>
         <li><strong>Crop</strong>:Kale</li>
     </ul>
+    <br>
+    <table border="1">
+        <tr>
+            <th>Date</th>
+            <th>Area</th>
+            <th>Crop</th>
+            <th>Yield</th>
+            <th>Units</th>
+        </tr>
+        <tr>
+            <td>05/02/2018</td>
+            <td>Chuau-1</td>
+            <td>Kale</td>
+            <td>10</td>
+            <td>Bunches</td>
+        </tr>
+        <tr>
+            <td>05/05/2018</td>
+            <td>SQ7</td>
+            <td>Kale</td>
+            <td>7</td>
+            <td>Bunches</td>
+        </tr>
+    </table>
 </body>
 </html>
