--- a/farmdata2/farmdata2_modules/fd2_school/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html.html
@@ -8,7 +8,51 @@
   <body>
     <h1>Harvest Report</h1>
         <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
-        <hr>
+        <label for="title">Title</label>
+        <input type="text" id="title"/>
+        <br>
+        <br>
+        <select id="crop" name="crop">
+          <option>Broccoli</option>
+          <option selected>Kale</option>
+          <option>Peas</option>
+        </select>
+        <label for="crop">Crop</label>
+        <br>
+        <br>
+        <select id="field" name="field">
+          <option selected>All</option>
+          <option>Chuau-1</option>
+          <option>SQ7</option>
+        </select>
+        <label for="field">Field</label>
+        <br>
+        <br>
+        <form>
+          <label>
+            Start Date:
+            <input type="date" 
+            name="start-date" 
+            min="2014-01-01" 
+            max="2022-01-01"
+            value="2020-05-05">
+          </label>
+        </form>
+        <br>
+        <form>
+          <label>
+            End Date:
+            <input type="date" 
+            name="end-date" 
+            min="2020-05-05" 
+            max="2022-01-01"
+            value="2020-05-15">
+          </label>
+        </form>
+        <br>
+        <br>
+        <input type="button" value="Generate Report" />
+    <hr>
     <h1>My Sample Harvest Report</h1>
         <p>Details:</p>
         <ul>
