--- a/farmdata2/farmdata2_modules/fd2_school/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html.html
@@ -9,39 +9,20 @@
     <h1>Harvest Report</h1>
         <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
         <label for="title">Title</label>
-        <input type="text" id="title"/>
-        <br>
-        <br>
-        <select id="crop" name="crop">
-          <option>Broccoli</option>
-          <option selected>Kale</option>
-          <option>Peas</option>
-        </select>
-        <label for="crop">Crop</label>
-        <br>
-        <br>
-        <select id="field" name="field">
-          <option selected>All</option>
-          <option>Chuau-1</option>
-          <option>SQ7</option>
-        </select>
-        <label for="field">Field</label>
+        <input type="text" id="title" value="My Sample Harvest Report"/>
         <br>
         <br>
         <form>
           <label>
-            Start Date:
+            Start:
             <input type="date" 
             name="start-date" 
             min="2014-01-01" 
             max="2022-01-01"
             value="2020-05-05">
           </label>
-        </form>
-        <br>
-        <form>
           <label>
-            End Date:
+            End:
             <input type="date" 
             name="end-date" 
             min="2020-05-05" 
@@ -49,6 +30,19 @@
             value="2020-05-15">
           </label>
         </form>
+        <br>
+        <label for="crop">Crop</label>
+        <select id="crop" name="crop">
+          <option>Broccoli</option>
+          <option selected>Kale</option>
+          <option>Peas</option>
+        </select>
+        <label for="field">Area</label>
+        <select id="field" name="field">
+          <option selected>All</option>
+          <option>Chuau-1</option>
+          <option>SQ7</option>
+        </select>
         <br>
         <br>
         <input type="button" value="Generate Report" />
@@ -64,5 +58,28 @@
             <li><strong>End:</strong>05/15/2018</li>
             <li><strong>Crop:</strong>Kale</li>
         </ul>
+        <table border=1>
+            <tr>
+                <th>Date</th>
+                <th>Area</th>
+                <th>Crop</th>
+                <th>Yield</th>
+                <th>Units</th>
+            </tr>
+            <tr>
+                <td>05/02/2018</td>
+                <td>Chuau-01</td>
+                <td>Kale</td>
+                <td>10</td>
+                <td>Bunches</td>
+            </tr>
+            <tr>
+                <td>05/05/2018</td>
+                <td>SQ7</td>
+                <td>Kale</td>
+                <td>7</td>
+                <td>Bunches</td>
+            </tr>
+        </table>
   </body>
 </html>
