--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,7 +1,6 @@
 <h1> Harvest Report </h1>
 <p> This page is a <i>mockup</i> of a simplified harvest report.</p>
 <hr/>
-
 <h1> My Sample Harvest Report </h1>
 
 <p>Details: </p>
@@ -14,3 +13,7 @@
     <li><strong>End:</strong>05/15/2018</li>
     <li><strong>Crop:</strong>Kale</li>
 </ul>
+
+<br/>
+<input type="text" id="title" name="title" placeholder="title">
+<button type="button">Generate Report</button>
