--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,5 +1,25 @@
 <h1> Harvest Report </h1>
 <p> This page is a <i>mockup</i> of a simplified harvest report.</p>
+
+<label for="title">Title:</label>
+<input type="text" id="title" name="title" placeholder="title">
+<br/>
+<label for="crop">Crop:</label>
+<select id="crop" name="crop">
+    <option>Broccoli</option>
+    <option selected>Kale</option>
+    <option>Peas</option>
+</select>
+
+<label for="field">Area:</label>
+<select id="field" name="field">
+    <option selected>All</option>
+    <option>Chuau-1</option>
+    <option>SQ7</option>
+</select>
+<br/>
+<button type="button">Generate Report</button>
+
 <hr/>
 <h1> My Sample Harvest Report </h1>
 
@@ -13,7 +33,3 @@
     <li><strong>End:</strong>05/15/2018</li>
     <li><strong>Crop:</strong>Kale</li>
 </ul>
-
-<br/>
-<input type="text" id="title" name="title" placeholder="title">
-<button type="button">Generate Report</button>
