--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -4,6 +4,13 @@
 <label for="title">Title:</label>
 <input type="text" id="title" name="title" placeholder="title">
 <br/>
+
+<label for="start">Start:</label>
+<input type="date" id="start" name="start" value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+<label for="end">End:</label>
+<input type="date" id="end" name="end" value="2020-05-15" min="2020-05-05" max="2022-01-01" />
+<br/>
+
 <label for="crop">Crop:</label>
 <select id="crop" name="crop">
     <option>Broccoli</option>
@@ -18,11 +25,11 @@
     <option>SQ7</option>
 </select>
 <br/>
+
 <button type="button">Generate Report</button>
-
 <hr/>
-<h1> My Sample Harvest Report </h1>
 
+<h1> My Sample Harvest Report </h1>
 <p>Details: </p>
 <ul>
     <li><strong>Farm:</strong>Sample Farm</li>
