Added Title and Buttom to HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -6,9 +6,12 @@
 
     <body>
         <hr>
-        <h1>My Sample Harvest Report</h1>
+        <label for="title">Title:</label>
+        <h1>
+            <input type="text" id="title" name="title" value="My Sample Harvest Report" />
+        </h1>
         <p>Details:</p>
-        
+
         <ul>
         <li><strong>Farm:</strong>technologists</li>
         <li><strong>User:</strong>manager1</li>
@@ -20,5 +23,7 @@
             <li><strong>End:</strong>05/15/2018</li>
             <li><strong>Crop:</strong>Kale</li>
             </ul>
+        <br>
+        <button type="button">Generate Report</button>
     </body>
   </html>
