--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,6 +1,32 @@
 
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
+
+<br>
+<label for="title">Title:</label>
+<input type="text" id="title" name="title"/>
+<br>
+<label for="start-date">Start:</label>
+<input type="datetime-local" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+<label for="end-date">End:</label>
+<input type="datetime-local" id="end-date" name="end-date" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+<br>
+<label for="crop">Crop:</label>
+<select id="crop" name="crop">
+    <option>Broccoli</option>
+    <option selected>Kale</option>
+    <option>Peas</option>
+</select>
+<label for="field">Area:</label>
+<select id="field" name="field">
+    <option selected>All</option>
+    <option>Chuau-1</option>
+    <option>SQ7</option>
+</select>
+<br>
+<br>
+<button type="button">Generate Report</button>
+<hr>
 <hr>
 
 <h1>My Sample Harvest Report</h1>
@@ -15,3 +41,29 @@
     <li><strong>Crop</strong>:Kale</li>
 </ul>
 
+
+
+<br>
+<table border="1px solid black">
+    <tr>
+        <th>Date</th>
+        <th>Area</th>
+        <th>Crop</th>
+        <th>Yield</th>
+        <th>Units</th>
+    </tr>
+    <tr>
+        <td>05/02/2018</td>
+        <td>Chuau-1</td>
+        <td>Kale</td>
+        <td>10</td>
+        <td>Bunches</td>
+    </tr>
+    <tr>
+        <td>05/05/2018</td>
+        <td>SQ7</td>
+        <td>Kale</td>
+        <td>7</td>
+        <td>Bunches</td>
+    </tr>
+</table>
