--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Harvest Report</title>
-</head>
-<body>
+
     <h1>Harvest Report</h1>
-    <p>This page is a mockup of a simplified harvest report</p>
+    <p>This page is a <i>mockup</i> simplified harvest report</p>
+    <hr>
     <h1>My Sample Harvest Report</h1>
     <p>Details:</p>
     <ul>
@@ -15,7 +13,7 @@
         <br>
         <li><strong>Start:</strong>05/01/2018</li>
         <li><strong>End:</strong>05/15/2018</li>
-        <li><strong>Crop:</strong>Kale</li>
+        <li><strong>Crop:</strong> Kale</li>
     </ul>
-</body>
+
 </html>
