Added crops dropdown to HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -1,15 +1,25 @@
 <html>
-    <head>
-      <h1>Harvest Report</h1>
-      <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
-    </head>
-
     <body>
-        <hr>
+        <p>
+        <h1>Harvest Report</h1>
+        <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
+
         <label for="title">Title:</label>
-        <h1>
-            <input type="text" id="title" name="title" value="My Sample Harvest Report" />
-        </h1>
+        <input type="text" id="title" name="title" value="My Sample Harvest Report" />
+        <br>
+        <label for="crops">Crop:</label>
+        <select id="simple" name="simple">
+            <option selected>Kale</option>
+            <option>Peas</option>
+            <option>Broccoli</option>
+          </select>
+
+    
+        </p>
+
+        <hr>
+
+        
         <p>Details:</p>
 
         <ul>
