Added area dropdown to HTML.html

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -8,12 +8,17 @@
         <input type="text" id="title" name="title" value="My Sample Harvest Report" />
         <br>
         <label for="crops">Crop:</label>
-        <select id="simple" name="simple">
+        <select id="crops" name="crops">
             <option selected>Kale</option>
             <option>Peas</option>
             <option>Broccoli</option>
           </select>
-
+        <label for="area">Area:</label>
+        <select id="area" name="area">
+            <option selected>All</option>
+            <option>Chuau-1</option>
+            <option>SQ7</option>
+          </select>
     
         </p>
 
