--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -3,10 +3,21 @@
         <p>
         <h1>Harvest Report</h1>
         <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
-
+        <div>
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" value="My Sample Harvest Report" />
+        </div>
         <br>
+        <div>
+        <label for="startdate">Start:</label>
+        <input type="date" id="startdate" name="start_date" 
+            value="2020-05-05" min="2014-01-01" max="2022-01-01" />
+        <label for="enddate">End:</label>
+        <input type="date" id="startdate" name="start_date" 
+            value="2020-05-15" min="2020-05-05" max="2022-01-01" />
+        </div>
+        <br>
+        <div>
         <label for="crops">Crop:</label>
         <select id="crops" name="crops">
             <option selected>Kale</option>
@@ -19,7 +30,9 @@
             <option>Chuau-1</option>
             <option>SQ7</option>
           </select>
-    
+        </div>
+        <br>
+        <button type="button">Generate Report</button>
         </p>
 
         <hr>
@@ -38,7 +51,5 @@
             <li><strong>End:</strong>05/15/2018</li>
             <li><strong>Crop:</strong>Kale</li>
             </ul>
-        <br>
-        <button type="button">Generate Report</button>
     </body>
   </html>
