--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,19 +1,16 @@
 <h1>Harvest Report</h1>
-
-<p>This page is a mockup of a simplified harvest report</p>
-
+<p>This page is a <i>mockup</i> of a simplified harvest report</p>
+<hr>
 <h1>My Sample Harvest Report</h1>
-
 <p>
 Details:
 <ul>
     <li>Farm:Sample Farm</li>
     <li>User:manager1</li>
     <li>Language:English</li>
- </ul>
-<ul>
-       <li>Start:05/01/2018</li>
-       <li>End:05/15/2018</li>
-       <li>Crop:Kale</li>
+    <br> 
+    <li>Start:05/01/2018</li>
+    <li>End:05/15/2018</li>
+    <li>Crop:Kale</li>
  </ul>
 </p>
