--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,5 +1,13 @@
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report</p>
+
+<label for="title">Title</label>
+<input type="text" id="title" name="title" value="My Sample Harvest Report" />
+<br>
+<button type="button">Generate Report</button>
+
+
+
 <hr>
 <h1>My Sample Harvest Report</h1>
 <p>
@@ -14,3 +22,5 @@ Details:
     <li>Crop:Kale</li>
  </ul>
 </p>
+
+
