--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -4,9 +4,14 @@
 <label for="title">Title</label>
 <input type="text" id="title" name="title" value="My Sample Harvest Report" />
 <br>
+<label for="crop">Crop</label> 
+<select id="crop" name="Crop">
+    <option>Broccoli</option>
+    <option selected>Kale</option>
+    <option>Peas</option>
+</select>
+<br>
 <button type="button">Generate Report</button>
-
-
 
 <hr>
 <h1>My Sample Harvest Report</h1>
