--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -10,6 +10,12 @@
     <option selected>Kale</option>
     <option>Peas</option>
 </select>
+<label for="field">Area</label>
+<select id="field" name="Area">
+    <option selected>All</option>
+    <option>Chuau-1</option>
+    <option>SQ7</option>
+</select>
 <br>
 <button type="button">Generate Report</button>
 
