--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,7 +3,16 @@
 
 <label for="title">Title</label>
 <input type="text" id="title" name="title" value="My Sample Harvest Report" />
-<br>
+
+<br><br>
+
+<label for="start">Start:</label>
+<input type="date" id="start" name="start" value="2020-05-05" min="2014-01-01" max="2022-01-01"/>
+
+<label for="end">End:</label>
+<input type="date" id="end" name="end" value="2020-05-15" min="2020-05-05" max="2022-01-01"/>
+
+<br><br>
 <label for="crop">Crop</label> 
 <select id="crop" name="Crop">
     <option>Broccoli</option>
@@ -16,7 +25,8 @@
     <option>Chuau-1</option>
     <option>SQ7</option>
 </select>
-<br>
+
+<br><br>
 <button type="button">Generate Report</button>
 
 <hr>
