--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -34,14 +34,36 @@
 <p>
 Details:
 <ul>
-    <li>Farm:Sample Farm</li>
-    <li>User:manager1</li>
-    <li>Language:English</li>
+    <li><b>Farm</b>:Sample Farm</li>
+    <li><b>User</b>:manager1</li>
+    <li><b>Language</b>:English</li>
     <br> 
-    <li>Start:05/01/2018</li>
-    <li>End:05/15/2018</li>
-    <li>Crop:Kale</li>
+    <li><b>Start</b>:05/01/2018</li>
+    <li><b>End</b>:05/15/2018</li>
+    <li><b>Crop</b>:Kale</li>
  </ul>
 </p>
 
-
+<table border="1">
+    <tr>
+        <th>Date</th>
+        <th>Area</th>
+        <th>Crop</th>
+        <th>Yield</th>
+        <th>Units</th>
+    </tr>
+    <tr>
+        <td>05/02/2018</td>
+        <td>Chuau-1</td>
+        <td>Kale</td>
+        <td>10</td>
+        <td>Bunches</td>
+    </tr>
+    <tr>
+        <td>05/05/2018</td>
+        <td>SQ7</td>
+        <td>Kale</td>
+        <td>7</td>
+        <td>Bunches</td>
+    </tr>
+</table>
