--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,1 +1,28 @@
-<p>This is my sub-tab</p>
+<h1>
+Harvest Report
+    </h1>
+    <body>
+        <p>
+            This page is a mockup of a simplified harvest report.
+        </p>
+        </body>
+
+<h1>
+My Sample Harvest Report
+    </h1>
+
+    <body>
+        <p>
+            Details:
+            </p>
+            <ul>
+                <li><strong>Farm: </strong>Sample Farm</li>
+                <li><strong>User: </strong>manager1</li>
+                <li><strong>Language: </strong>English</li>
+                <li> </li>
+                <li><strong>Start: </strong>05/01/2018</li>
+                <li><strong>End: </strong>05/15/2018</li>
+                <li><strong>Crop: </strong>Kale</li>
+
+                </ul>
+        </body>
