--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,9 +3,11 @@ Harvest Report
     </h1>
     <body>
         <p>
-            This page is a mockup of a simplified harvest report.
+            This page is a <i>mockup</i> of a simplified harvest report.
         </p>
         </body>
+
+<hr/>
 
 <h1>
 My Sample Harvest Report
@@ -19,7 +21,7 @@ My Sample Harvest Report
                 <li><strong>Farm: </strong>Sample Farm</li>
                 <li><strong>User: </strong>manager1</li>
                 <li><strong>Language: </strong>English</li>
-                <li> </li>
+            </br>
                 <li><strong>Start: </strong>05/01/2018</li>
                 <li><strong>End: </strong>05/15/2018</li>
                 <li><strong>Crop: </strong>Kale</li>
