Added the crop select box

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -34,5 +34,12 @@ My Sample Harvest Report
             <input type="text" id="comment" name="comment" value="" />
             </br>
             <input type="submit" value="Generate Report" />
-
+            </br>
+           
+            <label for="simple">Crop: </label>
+            <select id="simple" name="simple">
+                <option>Peas</option>
+                <option selected>Kale</option>
+                <option>Broccoli</option>
+              </select>              
         </body>
