Added Field select box

--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -34,12 +34,23 @@ My Sample Harvest Report
             <input type="text" id="comment" name="comment" value="" />
             </br>
             <input type="submit" value="Generate Report" />
+
             </br>
            
-            <label for="simple">Crop: </label>
-            <select id="simple" name="simple">
+            <label for="crop">Crop: </label>
+            <select id="crop" name="crop">
                 <option>Peas</option>
                 <option selected>Kale</option>
                 <option>Broccoli</option>
-              </select>              
+              </select>  
+              
+            </br>
+
+            <label for="field">Field: </label>
+            <select id="field" name="field">
+                <option>Chuau-1</option>
+                <option selected>All</option>
+                <option>SQ7</option>
+              </select> 
+
         </body>
