--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,6 +3,9 @@
 
     <h1>Harvest Report</h1>
     <p>This page is a <i>mockup</i> simplified harvest report</p>
+    <label for="title">Title:</label>
+    <input type="text" id="text" name="text" value="My Sample Harvest Report" />
+    <button id="generateButton">Generate Report</button>
     <hr>
     <h1>My Sample Harvest Report</h1>
     <p>Details:</p>
