--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -3,8 +3,31 @@
 
     <h1>Harvest Report</h1>
     <p>This page is a <i>mockup</i> simplified harvest report</p>
-    <label for="title">Title:</label>
-    <input type="text" id="text" name="text" value="My Sample Harvest Report" />
+    <p>
+        <label for="title">Title:</label>
+        <input type="text" id="text" name="text" value="My Sample Harvest Report" />
+    </p>
+    <p>
+        <label for="start">Start:</label>
+        <input type="date" id="start" name="start-date" value="05/05/2020" min="01/01/2014" max="01/01/2022">
+        <label for="end">End:</label>
+        <input type="date" id="end" name="end-date" value="05/15/2020" min="05/05/2020" max="01/01/2022">
+    </p>
+    <p>
+        <label for="crop">Crop:</label>
+        <select id="crop" name="crop">
+            <option value="broccoli">Broccoli</option>
+            <option value="kale" selected>Kale</option>
+            <option value="peas">Peas</option>
+        </select>
+
+        <label for="area">Area:</label>
+        <select id="area" name="area">
+            <option value="all" selected>All</option>
+            <option value="Chuau-1">Chuau-1</option>
+            <option value="SQ7"></option>
+        </select>
+    </p>
     <button id="generateButton">Generate Report</button>
     <hr>
     <h1>My Sample Harvest Report</h1>
