--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -11,7 +11,10 @@
                 var test = new Vue({
                     el: "#test",
                     data: {
-                     reportTitle:""
+                     reportTitle:"" ,
+                     startDate:"2020-05-05",
+                     endDate: "2020-05-15",
+                     selectedCrop: "kale"
                  }
                 })
             </script>
@@ -19,11 +22,11 @@
             <h1>Harvest Report</h1>
             <p>This page is a <em>mockup</em> of a simplified harvest report</p>
             <label for="start">Start Date:</label>
-                <input type="date" id="start" name="start-date" value="2020-05-05" min="2014-01-01" max="2022-01-01"/>
+                <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01"/>
             <label for="end">End Date:</label>
-                <input type="date" id="end" name="end-date" value="20202-05-15" min="2020-05-05" max="2022-01-01"/><br>
+                <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01"/><br>
             <label for="crops">Crop:</label>
-                <select name="crops" id="crops">
+                <select name="crops" id="crops" v-model="selectedCrop">
                     <option value="broccili">Broccili</option>
                     <option value="kale">Kale</option>
                     <option value="peas">Peas</option>
