--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -4,7 +4,7 @@
         <body>
             <div id="test">
                 <input type="text" v-model="reportTitle" placeholder="Enter report title">
-                <h1 v-cloak>{{ reportTitle }}</h1>
+                <h1 v-cloak>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
             </div>
             <script src="https://unpkg.com/vue@2"></script>
             <script>
