--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -30,19 +30,35 @@
 <button type="button">Generate Report</button>
 
 <hr>
-<h1>My Sample Harvest Report</h1>
-<p>
-Details:
-<ul>
-    <li><b>Farm</b>:Sample Farm</li>
-    <li><b>User</b>:manager1</li>
-    <li><b>Language</b>:English</li>
-    <br> 
-    <li><b>Start</b>:05/01/2018</li>
-    <li><b>End</b>:05/15/2018</li>
-    <li><b>Crop</b>:Kale</li>
- </ul>
-</p>
+<body>
+    <div id="rptTitle" v-cloak>
+        <h1>{{header}}</h1>
+        <input type = "text" v-model="header">
+    </div>
+    <script>
+        var rptTitle = new Vue({
+            el:"#rptTitle",
+            data: {
+                header: "My Sample Harvest Report"
+            }
+        })
+    </script>
+    
+    <p>
+    Details:
+    <ul>
+        <li><b>Farm</b>:Sample Farm</li>
+        <li><b>User</b>:manager1</li>
+        <li><b>Language</b>:English</li>
+        <br> 
+        <li><b>Start</b>:05/01/2018</li>
+        <li><b>End</b>:05/15/2018</li>
+        <li><b>Crop</b>:Kale</li>
+     </ul>
+    </p>
+</body>
+
+
 
 <table border="1">
     <tr>
@@ -67,3 +83,4 @@ Details:
         <td>Bunches</td>
     </tr>
 </table>
+
