Updated Title: Mock Harvest Report when empty

--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -30,7 +30,7 @@
     <button type="button">Generate Report</button>
     
     <hr>
-    <h1>{{rptTitle}}</h1>
+    <h1>{{rptTitle==""? "Mock Harvest Report":rptTitle}}</h1>
 
 
 <p>
