--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -5,22 +5,21 @@
     <body>
         <div id="report">
             <br>
-            
             <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
             <label for=”reportTitle”>Title:</label>
             <input type="text" id="reportTitle" value="My Sample Harvest Report" v-model="reportTitle"/>
             <br>
             <br>
             <label for="start">Start:</label>
-            <input type="date" id="start" name="start" value="2020-05-05" 
-            min="2014-01-01" max="2022-01-01" />
+            <input type="date" id="start" name="start"  
+            min="2014-01-01" max="2022-01-01" value="2020-05-05" v-model="reportStartDate"/>
             <label for="send">End:</label>
-            <input type="date" id="end" name="end" value="2020-05-15" 
-            min="2020-05-05" max="2022-01-01" />
+            <input type="date" id="end" name="end" 
+            min="2020-05-05" max="2022-01-01" value="2020-05-15" v-model="reportEndDate"/>
             <br>
             <br>
             <label for=”crops”>Crop:</label>
-            <select id="crops" name="crops">
+            <select id="crops" name="crops" v-model="reportCrop">
                 <option selected>Kale</option>
                 <option>Broccoli</option>
                 <option>Peas</option>
@@ -42,9 +41,9 @@
                 <li><b>User:</b>manager1</li>
                 <li><b>Language:</b>English</li>
                 <br>
-                <li><b>Start:</b>05/01/2018</li>
-                <li><b>End:</b>05/15/2018</li>
-                <li><b>Crop:</b>Kale</li>
+                <li><b>Start:</b>{{reportStartDate}}</li>
+                <li><b>End:</b>{{reportEndDate}}</li>
+                <li><b>Crop:</b>{{reportCrop}}</li>
             </ul>
             <table border="1">
                 <tr>
@@ -68,15 +67,20 @@
                     <td>7</td>
                     <td>Bunches</td>
                 </tr>
+            </table>
         </div>
     <script>
         var title = new Vue({
-            el:'#report',
+            el:"#report",
             data: {
-                reportTitle: "My Sample Harvest Report"
+                reportTitle: "My Sample Harvest Report",
+                reportStartDate: "2020-05-05",
+                reportEndDate: "2020-05-15",
+                reportCrop: "Kale",
             }
 
         });
     </script>
+
     </body>
 </html>
