Added default title for empty text field

--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -34,7 +34,7 @@
             <br>
             <input type="button" value="Generate Report" />
             <hr>
-            <h1>{{reportTitle}}</h1> 
+            <h1>{{reportTitle==""?"Mock Harvest Report":reportTitle}}</h1> 
             <p>Details:</p>
             <ul>
                 <li><b>Farm:</b>Sample Farm</li>
