--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -20,15 +20,11 @@
             <br>
             <label for=”crops”>Crop:</label>
             <select id="crops" name="crops" v-model="reportCrop">
-                <option selected>Kale</option>
-                <option>Broccoli</option>
-                <option>Peas</option>
+                <option v-for="crop in crops">{{crop}}</option>
             </select>
             <label for=”fields”>Area:</label>
             <select id="fields" name="fields">
-                <option selected>All</option>
-                <option>Chuau-1</option>
-                <option>SQ7</option>
+                <option v-for="area in areas">{{area}}</option>
             </select>
             <br>
             <br>
@@ -70,13 +66,15 @@
             </table>
         </div>
     <script>
-        var title = new Vue({
+        var report = new Vue({
             el:"#report",
             data: {
                 reportTitle: "My Sample Harvest Report",
                 reportStartDate: "2020-05-05",
                 reportEndDate: "2020-05-15",
                 reportCrop: "Kale",
+                crops:["Kale","Broccoli","Peas"],
+                areas:["All","Chuau-1","SQ7"],
             }
 
         });
