Added ternary statement to title

--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -34,7 +34,7 @@
             <button type="generate">Generate Report</button>
         </body>
     <hr>
-        <h1>{{ title }}</h1>
+        <h1>{{ (title == '') ? 'Mock Harvest Report':title}}</h1>
             <body> 
                 <p>Details:
                     <ul>
