Set devtools config to true in browser.

--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/vue1.html
@@ -53,6 +53,7 @@
                     ],
                  }
                 })
+                Vue.config.devtools = true;
             </script>
             <title>Title Field Example</title>
             <h1>Harvest Report</h1>
