added vue 'mock harvest report' element to header

--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/html.html
@@ -58,7 +58,7 @@ Harvest Report
 
 
 <hr/>
-            <h1>{{ header }}</h1>
+            <h1>{{ (header == '') ? 'Mock Harvest Report':header}}</h1>
         
         
         <script src="https://unpkg.com/vue@2"></script>
