added vue dev tools

--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/html.html
@@ -137,6 +137,7 @@ Harvest Report
                         ]
                     }
                 });
+                Vue.config.devtools = true;
             </script>
 
         </body>
