--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -44,7 +44,7 @@
         <br>
         <input type="button" value="Generate Report" />
     <hr>
-      <h1>{{ reportTitle }}</h1>
+      <h1>{{ reportTitle ? reportTitle: "Mock Harvest Report"}}</h1>
         <p>Details:</p>
         <ul>
             <li><strong>Farm:</strong>Sample Farm</li>
