Added Vue devtools

--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -84,9 +84,10 @@
                 harvestReport1: [
                     {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
                     {date: "2019-06-17", area: "SQ7", crop: "Peas", yield: 40, units: "Pods"}
-                ],
+                ]
             }
         })
+        Vue.config.devtools = true;
     </script>
 <hr>
 </html>
