modified FD2 school to have field element

--- a/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
+++ b/farmdata2/farmdata2_modules/fd2_school/HTML/HTML.html
@@ -25,11 +25,18 @@
                     <li><strong>Language:</strong>English</li> <br>
                     <li><strong>Start:</strong>05/01/2018</li>
                     <li><strong>End:</strong>05/15/2018</li>
-                    <li><label for="crop"><strong>Crop:</strong></label></strong>
+                    <li><label for="crop"><strong>Crop:</strong></label>
                         <select id="crops" name="crops" >
                                 <option>Broccoli</option>
                                 <option selected>Kale</option>
                                 <option>Peas</option>
+                        </select>
+                    </li>
+                    <li><label for="area"><strong>Area:</strong></label>
+                        <select id="fields" name="fields">
+                            <option selected>All</option>
+                            <option>Chuau-1</option>
+                            <option>SQ7</option>
                         </select>
                     </li>
                 </ul>
